# ffmpeg_hw_decode_demo

./: local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: ThreadSafeQueue.cpp  VideoDecoder.cpp  VideoDecoder.h  native-lib.cpp
app/src/main/cpp/utils/: CallJava.cpp  CallJava.h
app/src/main/java/com/eutroeye/csbox/player/: CodecUtil.java  CodecedOutListener.java  MainActivity.java  VideoPlayer.java
app/src/main/java/com/example/testffmpeg/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
ffmpegdecode/: build.gradle
ffmpegdecode/src/androidTest/java/com/example/ffmpegdecode/: ExampleInstrumentedTest.java
ffmpegdecode/src/main/: AndroidManifest.xml
ffmpegdecode/src/main/res/values/: strings.xml
ffmpegdecode/src/test/java/com/example/ffmpegdecode/: ExampleUnitTest.java
ffmpegdeocde/: build.gradle
ffmpegdeocde/src/androidTest/java/com/example/ffmpegdeocde/: ExampleInstrumentedTest.java
ffmpegdeocde/src/main/: AndroidManifest.xml  CMakeLists.txt
ffmpegdeocde/src/main/cpp/: ThreadSafeQueue.h  VideoDecoder.cpp  VideoDecoder.h  native-lib.cpp
ffmpegdeocde/src/main/cpp/utils/: CallJava.cpp  CallJava.h  const.h
ffmpegdeocde/src/main/java/com/example/ffmpegdeocde/listener/: VideoOnPreparedListener.java
ffmpegdeocde/src/main/java/com/example/ffmpegdeocde/player/: VideoPlayer.java
ffmpegdeocde/src/main/res/values/: strings.xml
ffmpegdeocde/src/test/java/com/example/ffmpegdeocde/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+2 files in other folders)
